# insight-bot

./: .env.example  .gitignore  GUIDE.md  README.md  docker-compose.yml
chatbot/: .env.example  Dockerfile  pyproject.toml
chatbot/app/: agent.py  main.py  ui.py  utils.py
chatbot/app/config/: mcp_client.json
chatbot/app/config/prompts/: system.txt
chatbot/app/mcp_servers/: jaeger.py  loki.py  mock.py  prometheus.py
mock_services/profile/: .dockerignore  Dockerfile  README.md  pyproject.toml
mock_services/profile/app/: main.py
mock_services/user/: Dockerfile  README.md  pyproject.toml
mock_services/user/app/: main.py
monitoring_stack/grafana/: setup-grafana.sh
monitoring_stack/otel-collector/: otel-collector-config.yaml
